Fixed ellipsis on right side, used text-overflow.

--- a/style.css
+++ b/style.css
@@ -55,7 +55,10 @@ hr.top-bar{
   margin: 0 0 0 0;
   text-align: center;
 }
-.right h5{
+.right p{
   margin: 0 0 0 0;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
